Correcting the two test cases that failed